normalizing test likelihood

--- a/matrixmodel_seaflow_delta_py_CV_normalized.ipynb
+++ b/matrixmodel_seaflow_delta_py_CV_normalized.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "    }\n",
     "}\n",
     "generated quantities{\n",
-    "    vector[n_test] log_like_test;   // vector of test obs likelihoods\n",
+    "    real log_like_test = 0;             // test obs likelihoods\n",
     "    {int k=1;                       // start counter for log_like_test vector; put in brackets so variables are local\n",
     "    real diff;                      // declare error variable\n",
     "    for(it in 1:nt_obs){            // loop over all observations\n",
@@ -205,17 +205,19 @@
     "            diff += fabs(mod_obspos[iv,it] - obs[iv,it]);  // accumulate error increment from each size class\n",
     "        }\n",
     "        diff = diff/sigma;                                 // normalize error to have unit standard deviation\n",
-    "        log_like_test[k] = normal_lpdf(diff | 0.0, 1.0);   // compute test likelihood\n",
+    "        log_like_test += normal_lpdf(diff | 0.0, 1.0);   // compute test likelihood\n",
     "        k += 1;                     // step log_like_test index\n",
     "        }\n",
-    "    }}\n",
+    "    }\n",
+    "        log_like_test = log_like_test/n_test;\n",
+    "    }\n",
     "}\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,14 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_4750d465e0dc8192f6e3218f302067d3 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_44c2e449ae963229e59fe7211cca5bbf NOW.\n"
      ]
     }
    ],
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -324,53 +326,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference for Stan model: anon_model_4750d465e0dc8192f6e3218f302067d3.\n",
+      "Inference for Stan model: anon_model_44c2e449ae963229e59fe7211cca5bbf.\n",
       "4 chains, each with iter=2000; warmup=1000; thin=1; \n",
       "post-warmup draws per chain=1000, total post-warmup draws=4000.\n",
       "\n",
-      "                     mean se_mean      sd      2.5%      25%      50%     75%   97.5%  n_eff   Rhat\n",
-      "delta_mu            63.95    0.01    1.02     61.93    63.27    63.93   64.62   65.97   5383    1.0\n",
-      "delta_sigma         13.71  8.6e-3     0.6     12.56     13.3     13.7   14.11   14.92   4834    1.0\n",
-      "delta_max[1]         0.35  1.3e-3    0.08      0.23     0.29     0.34     0.4    0.54   3617    1.0\n",
-      "delta_max[2]         1.08  2.4e-3    0.14      0.83     0.99     1.08    1.17    1.36   3204    1.0\n",
-      "delta_max[3]         1.76  4.1e-3    0.27      1.28     1.58     1.75    1.93    2.35   4177    1.0\n",
-      "delta_max[4]         2.71  6.6e-3    0.42      1.95     2.41     2.68    2.97     3.6   4053    1.0\n",
-      "delta_max[5]         2.96  7.3e-3     0.5      2.08     2.61     2.93    3.26    4.02   4691    1.0\n",
-      "delta_max[6]         3.33    0.01    0.86       1.9     2.76     3.26    3.82    5.25   4756    1.0\n",
-      "delta_max[7]         48.9    0.51   19.13      6.64    38.26    50.94   62.22   81.28   1414    1.0\n",
-      "delta_max[8]        63.16     0.2   13.73     36.38    53.86    63.42   72.52   90.19   4600    1.0\n",
-      "delta_max[9]        64.07    0.19   13.69     37.24    54.99    63.96   73.27   90.77   5029    1.0\n",
-      "delta_max[10]       63.87    0.21    13.7     37.11    54.76     64.0   73.29   90.61   4337    1.0\n",
-      "gamma_max           28.78    0.05    2.44     24.14    27.14     28.7   30.35   33.79   2929    1.0\n",
-      "E_star             2999.8    0.12   10.07    2980.4   2992.9   2999.9  3006.5  3019.2   6542    1.0\n",
-      "sigma                0.12  1.0e-4  6.8e-3      0.11     0.12     0.12    0.13    0.14   4548    1.0\n",
-      "log_like_test[1]    -1.26  9.0e-4    0.05     -1.37     -1.3    -1.26   -1.23   -1.17   3478    1.0\n",
-      "log_like_test[2]    -1.29  1.2e-3    0.07     -1.45    -1.33    -1.28   -1.24   -1.17   3536    1.0\n",
-      "log_like_test[3]    -2.63  5.3e-3    0.31     -3.28    -2.82    -2.61   -2.41   -2.05   3482    1.0\n",
-      "log_like_test[4]    -1.99  3.0e-3    0.21     -2.43    -2.11    -1.97   -1.84   -1.61   4674    1.0\n",
-      "log_like_test[5]    -1.52  2.7e-3    0.18     -1.92    -1.63     -1.5   -1.39   -1.23   4327    1.0\n",
-      "log_like_test[6]    -1.82  3.2e-3    0.24     -2.33    -1.98    -1.81   -1.65    -1.4   5494    1.0\n",
-      "log_like_test[7]    -1.73  3.2e-3    0.22     -2.23    -1.88    -1.72   -1.57   -1.35   4808    1.0\n",
-      "log_like_test[8]    -3.22  9.5e-3    0.61     -4.59    -3.58    -3.16   -2.79   -2.18   4118    1.0\n",
-      "log_like_test[9]    -2.63  7.7e-3    0.49     -3.72    -2.93    -2.59   -2.29   -1.76   4079    1.0\n",
-      "log_like_test[10]   -3.67  9.9e-3    0.64     -5.01    -4.06    -3.64   -3.24   -2.51   4117    1.0\n",
-      "log_like_test[11]   -2.29  5.2e-3    0.28     -2.91    -2.47    -2.27   -2.11   -1.78   2943    1.0\n",
-      "log_like_test[12]   -3.36  7.8e-3    0.46     -4.32    -3.66    -3.34   -3.04    -2.5   3437    1.0\n",
-      "log_like_test[13]   -2.42  5.2e-3     0.3     -3.06    -2.61     -2.4    -2.2   -1.88   3410    1.0\n",
-      "log_like_test[14]   -1.92  4.2e-3    0.28     -2.54     -2.1     -1.9   -1.72   -1.46   4425    1.0\n",
-      "log_like_test[15]    -1.6  3.3e-3    0.22      -2.1    -1.74    -1.58   -1.45   -1.23   4424    1.0\n",
-      "log_like_test[16]   -1.09  9.9e-4    0.06     -1.24    -1.12    -1.08   -1.05   -1.01   3710    1.0\n",
-      "log_like_test[17]   -1.78  2.8e-3    0.17     -2.19    -1.88    -1.76   -1.66   -1.49   3761    1.0\n",
-      "log_like_test[18]   -1.77  2.2e-3    0.15     -2.09    -1.87    -1.76   -1.67   -1.52   4487    1.0\n",
-      "log_like_test[19]   -1.96  3.6e-3    0.19     -2.36    -2.08    -1.95   -1.83   -1.61   2684    1.0\n",
-      "log_like_test[20]   -2.44  7.2e-3    0.37     -3.23    -2.69    -2.42   -2.19   -1.76   2694    1.0\n",
-      "log_like_test[21]   -3.87    0.01    0.54     -4.99    -4.22    -3.86   -3.51   -2.82   2686    1.0\n",
-      "log_like_test[22]   -2.01  4.3e-3    0.31     -2.71     -2.2    -1.97   -1.78   -1.49   5335    1.0\n",
-      "log_like_test[23]   -1.48  2.9e-3    0.18      -1.9    -1.58    -1.46   -1.35    -1.2   3728    1.0\n",
-      "log_like_test[24]   -2.59  6.8e-3    0.39     -3.47    -2.83    -2.56   -2.32   -1.92   3338    1.0\n",
-      "lp__               -250.2    0.08    3.02    -257.0   -252.0   -249.8  -248.0  -245.3   1573    1.0\n",
+      "                     mean se_mean      sd     2.5%      25%      50%     75%   97.5%  n_eff   Rhat\n",
+      "delta_mu            63.92    0.01    1.02    61.94    63.22    63.93   64.62   65.91   5820    1.0\n",
+      "delta_sigma         13.74  8.9e-3    0.57    12.63    13.36    13.74   14.11   14.87   4140    1.0\n",
+      "delta_max[1]         0.37  1.2e-3    0.08     0.24     0.31     0.35    0.41    0.55   4281    1.0\n",
+      "delta_max[2]         1.13  2.5e-3    0.14     0.86     1.03     1.12    1.22    1.42   3300    1.0\n",
+      "delta_max[3]         1.74  3.7e-3    0.24      1.3     1.59     1.73    1.88    2.25   4138    1.0\n",
+      "delta_max[4]         2.69  5.6e-3    0.39     1.98     2.43     2.68    2.94     3.5   4794    1.0\n",
+      "delta_max[5]         3.02  7.9e-3    0.48     2.18     2.69      3.0    3.31    4.07   3735    1.0\n",
+      "delta_max[6]         3.47    0.01    0.84     2.04     2.91     3.41    3.92    5.33   3290    1.0\n",
+      "delta_max[7]        43.03    0.53    20.7     6.14    28.33    45.55    58.1   78.99   1548    1.0\n",
+      "delta_max[8]        62.72    0.22   13.93    34.92    53.45    62.69   71.98   90.15   3997    1.0\n",
+      "delta_max[9]        64.02     0.2   13.62    38.03    54.74    63.67    73.5   90.59   4467    1.0\n",
+      "delta_max[10]        63.7     0.2   14.05    36.95    54.05    63.43   73.31    91.7   4973    1.0\n",
+      "gamma_max           29.26    0.04    2.28     24.9    27.75    29.16   30.71   33.95   2642    1.0\n",
+      "E_star             2999.9    0.13    9.74   2981.1   2993.3   3000.0  3006.8  3018.4   5985    1.0\n",
+      "sigma                0.12  1.0e-4  6.8e-3     0.11     0.12     0.12    0.13    0.14   4349    1.0\n",
+      "log_like_test       -2.57  2.7e-3    0.19    -2.96    -2.69    -2.56   -2.43   -2.22   4857    1.0\n",
+      "lp__               -246.9    0.07    2.94   -253.8   -248.6   -246.6  -244.9  -242.2   1657    1.0\n",
       "\n",
-      "Samples were drawn using NUTS at Wed Jan 15 21:51:02 2020.\n",
+      "Samples were drawn using NUTS at Wed Jan 15 22:15:48 2020.\n",
       "For each parameter, n_eff is a crude measure of effective sample size,\n",
       "and Rhat is the potential scale reduction factor on split chains (at \n",
       "convergence, Rhat=1).\n"
