notebooks to test fit of basic model for Zinser dataset

--- a/experimental_zinser_m30.ipynb
+++ b/experimental_zinser_m30.ipynb
@@ -765,7 +765,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
