--- a/experimental_zinser-fitpopgrowth_m26b.ipynb
+++ b/experimental_zinser-fitpopgrowth_m26b.ipynb
@@ -485,7 +485,7 @@
     "    'onedelta_respi_gammai_lightsig':'model with size-dep. respiration, size-dep. growth, one delta (no size-dep), light-dep div',\n",
     "    'gammai':'model with size-dep. growth and \"free\" deltas',\n",
     "    'gammai_lightsig':'model with size-dep. growth and \"free\" deltas, light-dep div',\n",
-    "    'onedelta_resp_gammai_lightsig':'model with size-dep. respiration, one delta (no size-dep), light thresh',\n",
+    "    'onedelta_resp_gammai_lightsig':'model with size-dep. respiration, one delta (no size-dep), light-dep div',\n",
     "}\n",
     "\n",
     "stan_codes = {}\n",
