--- a/latest_CV/zinser-freedelta-newj-onegamma-limitrho-m26_calibrated.ipynb
+++ b/latest_CV/zinser-freedelta-newj-onegamma-limitrho-m26_calibrated.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-03-16T20:42:54.968Z",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-03-16T20:42:58.143Z",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-03-16T20:43:07.930Z",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,18 +531,28 @@
     "}\n",
     "generated quantities{\n",
     "\treal log_like_test = 0; \n",
-    "\t{real diff;\n",
+    "    real log_like_train = 0;\n",
+    "\t{real diff_test;\n",
+    "     real diff_train;\n",
     "\tfor(it in 1:nt_obs){\n",
     "\t\tif(i_test[it] == 1){\n",
-    "\t\t\tdiff = 0.0;\n",
+    "\t\t\tdiff_test = 0.0;\n",
     "\t\t\tfor(iv in 1:m){\n",
-    "\t\t\t\tdiff += fabs(mod_obspos[iv,it] - obs[iv,it]);\n",
+    "\t\t\t\tdiff_test += fabs(mod_obspos[iv,it] - obs[iv,it]);\n",
     "\t\t\t}\n",
-    "\t\t\tdiff = diff/sigma;\n",
-    "\t\t\tlog_like_test += normal_lpdf(diff | 0.0, 1.0);\n",
-    "\t\t}\n",
+    "\t\t\tdiff_test = diff_test/sigma;\n",
+    "\t\t\tlog_like_test += normal_lpdf(diff_test | 0.0, 1.0);\n",
+    "\t\t}else{\n",
+    "            diff_train = 0.0;\n",
+    "            for(iv in 1:m){\n",
+    "                diff_train += fabs(mod_obspos[iv,it] - obs[iv,it]);\n",
+    "            }\n",
+    "            diff_train = diff_train/sigma;\n",
+    "            log_like_train += normal_lpdf(diff_train |0.0, 1.0);\n",
+    "        }\n",
     "\t}\n",
-    "\tlog_like_test = log_like_test/n_test;\n",
+    "\tlog_like_test  = log_like_test/n_test;\n",
+    "    log_like_train = log_like_train/(nt_obs-n_test);\n",
     "\t}\n",
     "}\n",
     "'''"
@@ -550,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-03-16T20:43:13.292Z",
@@ -602,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +625,7 @@
        "            dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +678,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_73472fc3d96301afa3a08dfac3bfa613 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_0bfb9ab67a298751bd24bc46dae4c081 NOW.\n"
      ]
     }
    ],
@@ -689,13 +699,33 @@
    },
    "outputs": [],
    "source": [
-    "#mcmc = model.sampling(data=data, iter=2000)\n",
+    "mcmc = model.sampling(data=data, iter=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mcmc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-68c03a69af20>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmcmc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__str__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'mod_obspos'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'mcmc' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "print('\\n'.join(x for x in mcmc.__str__().split('\\n') if 'mod_obspos' not in x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +734,7 @@
      "text": [
       "WARNING:pystan:n_eff / iter below 0.001 indicates that the effective sample size has likely been overestimated\n",
       "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:27 of 4000 iterations ended with a divergence (0.675 %).\n",
+      "WARNING:pystan:84 of 4000 iterations ended with a divergence (2.1 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
      ]
     }
@@ -1026,6 +1056,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
