--- a/latest_CV/zinser-freedelta-newj-onegamma-limitrho-m26_calibrated.ipynb
+++ b/latest_CV/zinser-freedelta-newj-onegamma-limitrho-m26_calibrated.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-03-16T20:43:13.292Z",
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "            dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,19 +654,36 @@
      "shell.execute_reply": "2020-03-16T20:44:16.177Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL anon_model_36bca75dd2ff5d0b2f2daa1a74f0f60a NOW.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pystan\n",
-    "\n",
+    "import pystan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = pystan.StanModel(model_code=stan_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc = model.sampling(data=data, iter=2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('\\n'.join(x for x in mcmc.__str__().split('\\n') if 'mod_obspos' not in x))"
    ]
   },
   {
@@ -697,36 +714,6 @@
      "shell.execute_reply": "2020-03-16T21:03:24.028Z"
     }
    },
-   "outputs": [],
-   "source": [
-    "mcmc = model.sampling(data=data, iter=2000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'mcmc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-68c03a69af20>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmcmc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__str__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;34m'mod_obspos'\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'mcmc' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\n'.join(x for x in mcmc.__str__().split('\\n') if 'mod_obspos' not in x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -734,7 +721,7 @@
      "text": [
       "WARNING:pystan:n_eff / iter below 0.001 indicates that the effective sample size has likely been overestimated\n",
       "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:84 of 4000 iterations ended with a divergence (2.1 %).\n",
+      "WARNING:pystan:16 of 4000 iterations ended with a divergence (0.4 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
      ]
     }
@@ -745,53 +732,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference for Stan model: anon_model_73472fc3d96301afa3a08dfac3bfa613.\n",
+      "Inference for Stan model: anon_model_0bfb9ab67a298751bd24bc46dae4c081.\n",
       "4 chains, each with iter=2000; warmup=1000; thin=1; \n",
       "post-warmup draws per chain=1000, total post-warmup draws=4000.\n",
       "\n",
       "                    mean se_mean      sd    2.5%     25%     50%     75%   97.5%  n_eff   Rhat\n",
-      "delta_mu            0.13  5.0e-3    0.24  8.9e-5  6.9e-3    0.04    0.14    0.78   2228    1.0\n",
-      "delta_sigma          5.8    0.24    3.07    1.98    3.51    5.07    7.31   13.64    169   1.02\n",
-      "delta_max[1]        1.98    0.09    4.86  1.5e-7  7.4e-3    0.23    1.78   14.27   3236    1.0\n",
-      "delta_max[2]        0.29    0.01    0.53  3.5e-7  3.2e-3    0.06    0.35    1.81   1777    1.0\n",
-      "delta_max[3]         0.2  8.8e-3    0.35  3.0e-8  2.0e-3    0.04    0.23    1.21   1608    1.0\n",
-      "delta_max[4]        0.15  7.7e-3    0.27  2.3e-8  1.2e-3    0.02    0.16    0.96   1214    1.0\n",
-      "delta_max[5]        0.11  5.8e-3    0.21  2.2e-8  1.2e-3    0.02    0.13    0.72   1259    1.0\n",
-      "delta_max[6]        0.09  4.7e-3    0.17  3.7e-8  1.1e-3    0.02    0.11     0.6   1327    1.0\n",
-      "delta_max[7]        0.08  5.5e-3    0.15  3.9e-8  1.0e-3    0.02     0.1    0.49    731    1.0\n",
-      "delta_max[8]        0.07  5.4e-3    0.13  4.9e-8  6.3e-4    0.01    0.08    0.46    565   1.01\n",
-      "delta_max[9]        0.07  5.2e-3    0.12  2.1e-8  1.0e-3    0.01    0.08    0.43    553    1.0\n",
-      "delta_max[10]       0.07  6.0e-3    0.13  5.3e-8  7.3e-4    0.01    0.08    0.48    460   1.01\n",
-      "delta_max[11]       0.07  6.7e-3    0.14  1.8e-8  7.1e-4    0.01    0.08    0.49    427   1.01\n",
-      "delta_max[12]       0.09  7.5e-3    0.17  1.5e-8  1.1e-3    0.02    0.11    0.61    515   1.01\n",
-      "delta_max[13]       0.13    0.01    0.24  8.6e-8  1.5e-3    0.03    0.16    0.82    396   1.01\n",
-      "delta_max[14]       0.23    0.02    0.34  7.7e-8  3.5e-3    0.08    0.35    1.13    427   1.01\n",
-      "delta_max[15]       0.42    0.03    0.53  1.4e-7 10.0e-3     0.2    0.66     1.8    328   1.01\n",
-      "delta_max[16]       0.57    0.04    0.77  1.6e-7    0.01    0.24     0.9    2.56    363   1.01\n",
-      "delta_max[17]        2.0    0.08    1.63  1.4e-5    0.72    1.86     2.9    5.77    448    1.0\n",
-      "delta_max[18]       3.35    0.13    3.02  7.2e-5    1.06    2.85    4.76   10.83    507   1.01\n",
-      "delta_max[19]       4.26    0.49    11.3  3.7e-7    0.03    0.74    3.45   33.33    524    1.0\n",
-      "delta_max[20]       73.7    0.57   17.16   36.16    63.7   77.23   86.99   95.16    904    1.0\n",
-      "gamma_mu            3.01    0.09    4.55  5.0e-4    0.15    1.75    4.25   14.07   2859    1.0\n",
-      "gamma_sigma         6.99    0.16    6.89    0.35    2.57    5.06    8.91   26.02   1772    1.0\n",
-      "gamma_max          67.91    0.84   15.42   37.94   56.44    67.0   80.67   94.21    337   1.01\n",
-      "E_star            305.36    6.92  111.41    31.2  233.41  306.47  392.89  491.04    259   1.01\n",
-      "sigma               0.06  1.2e-4  5.0e-3    0.05    0.06    0.06    0.06    0.07   1616    1.0\n",
-      "rho_mu              2.05    0.07    3.72  6.1e-4    0.09    0.98    2.72   10.97   2986    1.0\n",
-      "rho_sigma           5.83    0.15    6.43    0.24    1.83    3.68     7.4   23.77   1763    1.0\n",
-      "rho                14.65    0.11    1.71    10.5   13.72   14.93   15.84   17.29    239   1.01\n",
-      "divrate             0.47    0.02    0.24    0.22    0.32     0.4    0.54    1.24    162   1.02\n",
-      "log_like_test      -6.51    0.03    1.11   -8.98   -7.19   -6.39   -5.71   -4.69   1638    1.0\n",
-      "lp__              -137.9    0.74    9.43  -156.8  -144.5  -137.1  -130.9  -121.3    162   1.02\n",
+      "delta_mu            0.14  5.5e-3    0.27  7.8e-5  7.3e-3    0.04    0.16     0.8   2382    1.0\n",
+      "delta_sigma         5.88    0.28    3.37    1.96    3.45    4.94    7.36   14.65    142   1.01\n",
+      "delta_max[1]        1.92     0.1    4.99  1.4e-8  8.2e-3    0.23    1.67   13.63   2741    1.0\n",
+      "delta_max[2]        0.29    0.02    0.54  4.6e-8  2.1e-3    0.05    0.36    1.86   1225    1.0\n",
+      "delta_max[3]         0.2    0.01    0.36  6.9e-9  2.0e-3    0.04    0.22    1.27   1170    1.0\n",
+      "delta_max[4]        0.15  8.6e-3    0.27  2.8e-8  2.0e-3    0.04    0.18    0.95    985    1.0\n",
+      "delta_max[5]        0.12  5.8e-3     0.2  1.3e-8  1.4e-3    0.03    0.15     0.7   1227    1.0\n",
+      "delta_max[6]         0.1  6.7e-3    0.18  2.4e-8  1.1e-3    0.02    0.11    0.64    717    1.0\n",
+      "delta_max[7]        0.08  5.6e-3    0.14  1.2e-8  8.8e-4    0.02     0.1    0.48    631    1.0\n",
+      "delta_max[8]        0.07  5.8e-3    0.13  6.4e-9  8.8e-4    0.02    0.09    0.47    545    1.0\n",
+      "delta_max[9]        0.07  5.8e-3    0.12  4.7e-9  8.8e-4    0.01    0.08     0.4    421    1.0\n",
+      "delta_max[10]       0.07  6.4e-3    0.13  1.0e-8  6.6e-4    0.01    0.08    0.46    403   1.01\n",
+      "delta_max[11]       0.08  8.3e-3    0.15  4.4e-9  6.4e-4    0.01    0.08    0.55    338   1.01\n",
+      "delta_max[12]        0.1  9.8e-3    0.19  2.3e-9  7.1e-4    0.02    0.11    0.65    360   1.01\n",
+      "delta_max[13]       0.14    0.01    0.24  7.7e-9  1.6e-3    0.03    0.17    0.91    337   1.01\n",
+      "delta_max[14]       0.24    0.02    0.35  9.5e-9  2.7e-3    0.07    0.35     1.2    377   1.01\n",
+      "delta_max[15]       0.45    0.03    0.57  5.2e-8    0.01    0.22    0.72    1.95    286   1.01\n",
+      "delta_max[16]       0.58    0.05     0.8  7.3e-8    0.01    0.23    0.88    2.79    298   1.01\n",
+      "delta_max[17]       2.09    0.08    1.64  2.2e-5    0.86    1.91     3.0    5.93    460   1.01\n",
+      "delta_max[18]        3.3    0.16    3.18  8.0e-6    0.89    2.77    4.69   11.43    379   1.01\n",
+      "delta_max[19]       3.82    0.32    8.99  1.3e-7    0.02    0.75    3.46   27.18    783    1.0\n",
+      "delta_max[20]      74.12    0.34    15.9   37.78   64.37    76.9   86.74   95.04   2139    1.0\n",
+      "gamma_mu             3.3    0.11     4.8  7.4e-4    0.23    2.14    4.39   16.29   1877    1.0\n",
+      "gamma_sigma         7.06    0.18    7.17    0.29    2.52    4.85    9.07   27.24   1674    1.0\n",
+      "gamma_max          66.99    0.89   15.36   37.39   55.71    66.5   78.82   94.17    297   1.01\n",
+      "E_star            297.83    7.55  112.76   21.33  230.54  298.96  381.29   486.4    223   1.01\n",
+      "sigma               0.06  1.1e-4  5.0e-3    0.05    0.06    0.06    0.06    0.07   1918    1.0\n",
+      "rho_mu              2.15    0.07    3.66  2.7e-4    0.11    1.07    2.74   10.95   2697    1.0\n",
+      "rho_sigma           5.94    0.14    6.42    0.28    1.98    3.92    7.56   24.14   1974    1.0\n",
+      "rho                14.62    0.13    1.81   10.16   13.68   14.92   15.87   17.41    202   1.01\n",
+      "divrate             0.48    0.02    0.26    0.22    0.31    0.41    0.56    1.32    145   1.02\n",
+      "log_like_test      -6.46    0.03    1.12   -9.03   -7.13   -6.34   -5.66   -4.65   1743    1.0\n",
+      "log_like_train     -4.59    0.01    0.58   -5.81   -4.97   -4.56    -4.2   -3.57   2383    1.0\n",
+      "lp__              -137.7    0.86    9.93  -158.2  -144.2  -136.8  -130.4  -120.6    134   1.01\n",
       "\n",
-      "Samples were drawn using NUTS at Mon Mar 23 13:22:39 2020.\n",
+      "Samples were drawn using NUTS at Tue Mar 24 15:27:38 2020.\n",
       "For each parameter, n_eff is a crude measure of effective sample size,\n",
       "and Rhat is the potential scale reduction factor on split chains (at \n",
       "convergence, Rhat=1).\n"
