added a few comments

--- a/experimental_zinser_seaflow_20200330_xval.ipynb
+++ b/experimental_zinser_seaflow_20200330_xval.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## testing several models for both the SeaFlow and Zinser (updated) datasets"
+    "## testing several models for both the SeaFlow and Zinser (updated) datasets\n",
+    "a few comments:\n",
+    " * there are no testing indices for the SeaFlow data yet, so the dataset has been removed here\n",
+    " * while the model without light-dependent division performs better in matching the size distribution data (and has better Rhat values), light-dependent division creates more realistic "
    ]
   },
   {
