--- a/experimental_zinser_seaflow_20200330_xval.ipynb
+++ b/experimental_zinser_seaflow_20200330_xval.ipynb
@@ -7,7 +7,7 @@
     "## testing several models for both the SeaFlow and Zinser (updated) datasets\n",
     "a few comments:\n",
     " * there are no testing indices for the SeaFlow data yet, so the dataset has been removed here\n",
-    " * while the model without light-dependent division performs better in matching the size distribution data (and has better Rhat values), light-dependent division creates more realistic "
+    " * while the model without light-dependent division performs better in matching the size distribution data (and has better Rhat values), light-dependent division creates more realistic division rates"
    ]
   },
   {
