results looking at size-dependt growth/respiration

--- a/experimental_zinser_seaflow_20200410_xval.ipynb
+++ b/experimental_zinser_seaflow_20200410_xval.ipynb
@@ -1456,6 +1456,7 @@
     "    xticklabels = []\n",
     "    for i,name in enumerate(mcmcs):\n",
     "        mod_mean = np.mean(mcmcs[name][k]['mod_obspos'], axis=0)\n",
+    "        mod_mean /= np.sum(mod_mean, axis=0)\n",
     "        \n",
     "        e = np.sum((mod_mean-obs)**2,axis=0)\n",
     "        \n",
