--- a/experimental_zinser-fitpopgrowth_20200428.ipynb
+++ b/experimental_zinser-fitpopgrowth_20200428.ipynb
@@ -1416,6 +1416,78 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### size-dependent growth/respiration version 2 `respiv2`\n",
+    "$\\hat{\\gamma}_i = dt \\cdot s_i(\\xi) \\cdot \\left(\\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\frac{v_i/v_m}{\\xi+v_i/v_m} & \\text{ for }\\xi \\ge 0 \\\\ \\frac{1+(v_1-v_i)/v_m}{1+(v_1-v_i)/v_m-\\xi} & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
+    "\n",
+    "$\\gamma_i = \\begin{cases}\\hat{\\gamma}_i & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ 0 & \\text{ otherwise}\\end{cases}$ and $\\rho_i = \\begin{cases} 0 & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ -\\hat{\\gamma}_i & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "### size-dependent growth/respiration version 3 `respiv3`\n",
+    "\n",
+    "$\\hat{\\gamma}_i = dt \\cdot s_i(\\xi) \\cdot \\left(\\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi v_i\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi(v_i-v_1-v_m)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
+    "\n",
+    "$\\gamma_i = \\begin{cases}\\hat{\\gamma}_i & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ 0 & \\text{ otherwise}\\end{cases}$ and $\\rho_i = \\begin{cases} 0 & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ -\\hat{\\gamma}_i & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "### size-dependent growth version 3 + size-independent respiration `resp_gammaiv3`\n",
+    "size-dependence is not added to respiration term $\\hat{\\rho}$\n",
+    "\n",
+    "$\\hat{\\gamma}_i = dt \\cdot \\left(s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi v_i\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi(v_i-v_1-v_m)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
+    "\n",
+    "$\\gamma_i = \\begin{cases}\\hat{\\gamma}_i & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ 0 & \\text{ otherwise}\\end{cases}$ and $\\rho_i = \\begin{cases} 0 & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ -\\hat{\\gamma}_i & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "### size-dependent growth/respiration version 4 `respiv4`\n",
+    "like in version 1, growth and respiration can occur at the same time\n",
+    "\n",
+    "$\\gamma_i = dt \\cdot s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
+    "\n",
+    "$\\rho_i = dt \\cdot s_i(\\xi_r) \\hat{\\rho}$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi v_i\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi(v_i-v_1-v_m)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "### size-dependent growth/respiration version 5 `respiv5`\n",
+    "separate exponential size relationsships for growth and respiration\n",
+    "\n",
+    "$\\hat{\\gamma}_i = dt \\cdot \\left(s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - s_i(\\xi_r) \\hat{\\rho} \\right)$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi v_i\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi(v_i-v_1-v_m)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
+    "\n",
+    "$\\gamma_i = \\begin{cases}\\hat{\\gamma}_i & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ 0 & \\text{ otherwise}\\end{cases}$ and $\\rho_i = \\begin{cases} 0 & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ -\\hat{\\gamma}_i & \\text{ otherwise}\\end{cases}$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
