expanded information about different growth/respiration formulations

--- a/experimental_zinser-fitpopgrowth_20200429.ipynb
+++ b/experimental_zinser-fitpopgrowth_20200429.ipynb
@@ -1277,6 +1277,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## general information about the different growth/respiration versions\n",
+    "\n",
+    " * for the functional form of the different size-dependence formulations $s_i(\\xi)$ see [this notebook](sizedep_formulations.ipynb) \n",
+    "\n",
+    "### size-dependent growth/respiration version 1 `respi`\n",
+    "growth and respiration can occur at the same time\n",
+    "\n",
+    "$\\gamma_i = dt \\cdot s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
+    "\n",
+    "$\\rho_i = dt \\cdot s_i(\\xi_r) \\cdot \\hat{\\rho}$\n",
+    "\n",
+    "where \n",
+    "\n",
+    "$s_i(\\xi) = \\begin{cases} \\frac{v_i/v_m}{\\xi+v_i/v_m} & \\text{ for }\\xi \\ge 0 \\\\ \\frac{1+(v_1-v_i)/v_m}{1+(v_1-v_i)/v_m-\\xi} & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
     "### size-dependent growth/respiration version 2 `respiv2`\n",
     "$\\hat{\\gamma}_i = dt \\cdot s_i(\\xi) \\cdot \\left(\\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
     "\n",
@@ -1318,7 +1333,7 @@
     "\n",
     "$\\gamma_i = dt \\cdot s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
     "\n",
-    "$\\rho_i = dt \\cdot s_i(\\xi_r) \\hat{\\rho}$\n",
+    "$\\rho_i = dt \\cdot s_i(\\xi_r) \\cdot \\hat{\\rho}$\n",
     "\n",
     "where \n",
     "\n",
