new results and updated description

--- a/sizedep_formulations.ipynb
+++ b/sizedep_formulations.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "where \n",
     "\n",
-    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ otherwise}\\end{cases}$\n",
     "\n",
     "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
     "\n",
@@ -255,7 +255,7 @@
     "\n",
     "where \n",
     "\n",
-    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ otherwise}\\end{cases}$"
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ otherwise}\\end{cases}$"
    ]
   },
   {
