new models to compare

--- a/parameter_plots/mcmc.ipynb
+++ b/parameter_plots/mcmc.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -132,15 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m1 NOW.\n",
       "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m2 NOW.\n",
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m3 NOW.\n"
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m3 NOW.\n",
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m4 NOW.\n",
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5 NOW.\n",
+      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m6 NOW.\n"
      ]
     }
    ],
@@ -148,21 +152,14 @@
     "models = {}\n",
     "\n",
     "import pystan\n",
-    "refit_all = False\n",
-    "refit_required = {}\n",
     "\n",
     "modelfiles = {\n",
-    "    #'m1': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "    #'m11': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "    'm2': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv3_normparam_trackgrowth_xval.stan',\n",
-    "    'm3': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv4_normparam_trackgrowth_xval.stan',\n",
-    "    #'m4': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respi_gammai_normparam_trackgrowth_xval.stan',\n",
-    "    #'m5': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv2_normparam_trackgrowth_xval.stan',\n",
-    "    #'m6': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv3_normparam_trackgrowth_xval.stan',\n",
-    "    #'m7': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_resp_gammaiv3_normparam_trackgrowth_xval.stan',\n",
-    "    #'m8': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_gammaiv3_normparam_trackgrowth_xval.stan',\n",
-    "    #'m9': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
-    "    #'m10':'../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv4_normparam_trackgrowth_xval.stan',\n",
+    "    'm1': '../stancode/matrixmodel_estinilnorm_monodelta_respv2_normparam_trackgrowth_xval.stan',\n",
+    "    'm2': '../stancode/matrixmodel_estinilnorm_monodelta-lightsig_respv2_normparam_trackgrowth_xval.stan',\n",
+    "    'm3': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "    'm4': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv6_normparam_trackgrowth_xval.stan',\n",
+    "    'm5': '../stancode/matrixmodel_multinom_estinilnorm_monodelta_respiv7_normparam_trackgrowth_xval.stan',\n",
+    "    'm6': '../stancode/matrixmodel_multinom_estinilnorm_monodelta-lightsig_respiv7_normparam_trackgrowth_xval.stan',\n",
     "}\n",
     "\n",
     "for name in modelfiles:\n",
@@ -178,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -187,27 +184,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:pystan:2700 of 4000 iterations ended with a divergence (67.5 %).\n",
+      "WARNING:pystan:2670 of 4000 iterations ended with a divergence (66.8 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
       "WARNING:pystan:n_eff / iter below 0.001 indicates that the effective sample size has likely been overestimated\n",
       "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:1003 of 4000 iterations ended with a divergence (25.1 %).\n",
+      "WARNING:pystan:3999 of 4000 iterations ended with a divergence (100 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:850 of 4000 iterations saturated the maximum tree depth of 10 (21.2 %)\n",
-      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n",
-      "WARNING:pystan:Chain 3: E-BFMI = 0.000839\n",
+      "WARNING:pystan:Chain 1: E-BFMI = 0.00626\n",
+      "WARNING:pystan:Chain 2: E-BFMI = 8.26e-05\n",
+      "WARNING:pystan:Chain 3: E-BFMI = 0.0341\n",
+      "WARNING:pystan:Chain 4: E-BFMI = 0.00138\n",
       "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n",
-      "WARNING:pystan:3202 of 4000 iterations ended with a divergence (80 %).\n",
+      "WARNING:pystan:250 of 4000 iterations ended with a divergence (6.25 %).\n",
+      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
+      "WARNING:pystan:3148 of 4000 iterations ended with a divergence (78.7 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
       "WARNING:pystan:n_eff / iter below 0.001 indicates that the effective sample size has likely been overestimated\n",
       "WARNING:pystan:Rhat above 1.1 or below 0.9 indicates that the chains very likely have not mixed\n",
-      "WARNING:pystan:4000 of 4000 iterations ended with a divergence (100 %).\n",
+      "WARNING:pystan:1628 of 4000 iterations ended with a divergence (40.7 %).\n",
       "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n",
-      "WARNING:pystan:Chain 1: E-BFMI = 0.00102\n",
-      "WARNING:pystan:Chain 2: E-BFMI = 0.00114\n",
-      "WARNING:pystan:Chain 3: E-BFMI = 0.00118\n",
-      "WARNING:pystan:Chain 4: E-BFMI = 9.96e-05\n",
-      "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n"
+      "WARNING:pystan:361 of 4000 iterations saturated the maximum tree depth of 10 (9.03 %)\n",
+      "WARNING:pystan:Run again with max_treedepth larger than 10 to avoid saturation\n",
+      "WARNING:pystan:Chain 2: E-BFMI = 0.000165\n",
+      "WARNING:pystan:Chain 3: E-BFMI = 0.0023\n",
+      "WARNING:pystan:E-BFMI below 0.2 indicates you may need to reparameterize your model\n",
+      "WARNING:pystan:122 of 4000 iterations ended with a divergence (3.05 %).\n",
+      "WARNING:pystan:Try running with adapt_delta larger than 0.8 to remove the divergences.\n"
      ]
     }
    ],
