moved experimental notebooks into their own directory

--- a/sizedep_formulations.ipynb
+++ b/sizedep_formulations.ipynb
@@ -255,6 +255,18 @@
     "\n",
     "where \n",
     "\n",
+    "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "\n",
+    "### size-dependent growth version 6/7 and no respiration `gammaiv6` (same as `gammaiv7`)\n",
+    "like in versions 1 and 4, growth and respiration can occur at the same time\n",
+    "\n",
+    "$\\gamma_i = dt \\cdot s_i(\\xi) \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
+    "\n",
+    "$\\rho_i = 0$\n",
+    "\n",
+    "where \n",
+    "\n",
     "$s_i(\\xi) = \\begin{cases} \\exp\\left(\\xi \\cdot (v_i-v_m)\\right) & \\text{ for }\\xi \\ge 0 \\\\ \\exp\\left(\\xi \\cdot (v_i-v_1)\\right) & \\text{ otherwise}\\end{cases}$"
    ]
   },
