new notebook; updated description

--- a/sizedep_formulations.ipynb
+++ b/sizedep_formulations.ipynb
@@ -162,6 +162,8 @@
    "source": [
     "## general information about the different growth/respiration versions\n",
     "\n",
+    "**Note:** an \"i\" in the name indicates dependence on the size class index $i$ and thereby size-dependence \n",
+    "\n",
     "### size-dependent growth/respiration version 1 `respi`\n",
     "growth and respiration can occur at the same time\n",
     "\n",
@@ -172,6 +174,13 @@
     "where \n",
     "\n",
     "$s_i(\\xi) = \\begin{cases} \\frac{v_i/v_m}{\\xi+v_i/v_m} & \\text{ for }\\xi \\ge 0 \\\\ \\frac{1+(v_1-v_i)/v_m}{1+(v_1-v_i)/v_m-\\xi} & \\text{ otherwise}\\end{cases}$\n",
+    "\n",
+    "### growth/respiration version 2 (no size-dep) `respv2`\n",
+    "$\\hat{\\gamma}_i = dt \\cdot \\left(\\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
+    "\n",
+    "finally determine respiration and growth based on sign of $\\hat{\\gamma}_i$\n",
+    "\n",
+    "$\\gamma_i = \\begin{cases}\\hat{\\gamma}_i & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ 0 & \\text{ otherwise}\\end{cases}$ and $\\rho_i = \\begin{cases} 0 & \\text{ if } \\hat{\\gamma}_i \\ge 0 \\\\ -\\hat{\\gamma}_i & \\text{ otherwise}\\end{cases}$\n",
     "\n",
     "### size-dependent growth/respiration version 2 `respiv2`\n",
     "$\\hat{\\gamma}_i = dt \\cdot s_i(\\xi) \\cdot \\left(\\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right) - \\hat{\\rho} \\right)$\n",
