added prelim gallery info

--- a/experimental/experimental_zinser_seaflow_20200526_v7-prior.ipynb
+++ b/experimental/experimental_zinser_seaflow_20200526_v7-prior.ipynb
@@ -1546,7 +1546,6 @@
    "source": [
     "import time\n",
     "refit_all = False\n",
-    "refit_required = {}\n",
     "\n",
     "def get_max_rhat(fit):\n",
     "    s = fit.summary()\n",
@@ -1572,11 +1571,15 @@
     "for name in models:\n",
     "    if name not in maxrhats:\n",
     "        maxrhats[name] = {}\n",
+    "    if name not in meanrhats:\n",
+    "        meanrhats[name] = {}\n",
     "    if name not in sampling_time:\n",
     "        sampling_time[name] = {}\n",
     "    for dataname in data:\n",
     "        if dataname not in maxrhats[name]:\n",
     "            maxrhats[name][dataname] = []\n",
+    "        if dataname not in meanrhats[name]:\n",
+    "            meanrhats[name][dataname] = []\n",
     "        if dataname not in sampling_time[name]:\n",
     "            sampling_time[name][dataname] = []\n",
     "        if name in mcmcs:\n",
