--- a/experimental/experimental_zinser_seaflow_20200601_v7-prior_rho_max_gamma_max.ipynb
+++ b/experimental/experimental_zinser_seaflow_20200601_v7-prior_rho_max_gamma_max.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# effect of `gamma_max` and `rho_max` prior on `respiv7` convergence\n",
-    " * modified from 2020-05-16 notebook with a focus on the `gamma_max` prior and its effect on model convergence and fit\n",
-    " * based on the experiments here, there is little evidence that a tightening of the `gamma_max` prior by itself helps the model to converge better\n",
+    " * modified from 2020-05-26 notebook with a focus on the `gamma_max` and `rho_max` priors and their effect on model convergence and fit\n",
+    " * based on the experiments here, it looks like a combined adjustment of both priors helps the model to converge better\n",
     " \n",
     "### general information about the different growth/respiration versions\n",
     "\n",
