--- a/sizedep_formulations.ipynb
+++ b/sizedep_formulations.ipynb
@@ -162,7 +162,16 @@
    "source": [
     "## general information about the different growth/respiration versions\n",
     "\n",
-    "**Note:** an \"i\" in the name indicates dependence on the size class index $i$ and thereby size-dependence \n",
+    "**Note:** An \"i\" in the name indicates dependence on the size class index $i$ and thereby size-dependence.\n",
+    "\n",
+    "**Note 2:** In older versions of the code, $\\hat{\\rho}$ is often typically called `respiration`, in newer version it is referred to as `rho_max`.\n",
+    "\n",
+    "### growth/respiration version 1 (no size-dep) `respv1`\n",
+    "growth and respiration can occur at the same time\n",
+    "\n",
+    "$\\gamma_i = dt \\cdot \\gamma_{max} \\cdot \\left(1-\\exp\\left(-\\tfrac{E}{E^*}\\right)\\right)$\n",
+    "\n",
+    "$\\rho_i = dt \\cdot \\hat{\\rho}$\n",
     "\n",
     "### size-dependent growth/respiration version 1 `respi`\n",
     "growth and respiration can occur at the same time\n",
